--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "babel-plugin-macros": "^3.1.0",
+    "framer-motion": "^7.3.6",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-active-menu": "^0.0.14",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-scroll": "^1.8.7"
