--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^0.27.2",
     "babel-plugin-macros": "^3.1.0",
     "framer-motion": "^7.3.6",
     "next": "12.3.1",
