--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-active-menu": "^0.0.14",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-scroll": "^1.8.7"
+    "react-scroll": "^1.8.7",
+    "react-scrollspy-highlight": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
