--- a/package.json
+++ b/package.json
@@ -13,18 +13,26 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "babel-plugin-macros": "^3.1.0",
+    "cookie": "^0.5.0",
+    "cookies": "^0.8.0",
     "framer-motion": "^7.3.6",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.3.1",
+    "next-auth": "^4.12.3",
     "react": "18.2.0",
     "react-active-menu": "^0.0.14",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.4",
     "react-scroll": "^1.8.7",
     "react-scrollspy-highlight": "^1.0.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
