--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "babel-plugin-macros": "^3.1.0",
     "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
     "cookies": "^0.8.0",
     "framer-motion": "^7.3.6",
     "jsonwebtoken": "^8.5.1",
@@ -32,6 +33,8 @@
     "react-scrollspy-highlight": "^1.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
@@ -40,7 +43,10 @@
     "autoprefixer": "^10.4.11",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
+    "jest": "^29.1.2",
+    "jest-environment-jsdom": "^29.1.2",
     "postcss": "^8.4.16",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
   }
